fix(publication-exporter): make SiteReleaseManifest symlink checks atomic and cover surrogate escaping portably
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EfWDRVd5u4fddiLr3UU2go